--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "morgan": "~1.9.1",
     "pug": "^3.0.0",
     "sequelize": "^6.4.0",
+    "sequelize-cli": "^6.2.0",
     "sqlite3": "5.0.0"
   }
 }
